tests/toy/neg/001068_mutation.toylang
program a = { if a then sleep int else sleep; } .
